get material
